Fixed carousel overflow issue

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -53,6 +53,9 @@
     visibility: hidden;
   }
 }
+.overflow-hidden {
+  overflow: hidden;
+}
 .banner-button {
   position: absolute;
   top: 30%;
